--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@ $font: 'Quicksand', sans-serif;
     padding-top: 50px;
     padding-bottom: 100px;
     margin: auto;
-    left: 100px;
+    left: 150px;
     position: relative;
     animation:formIn 1s 1;
     animation-fill-mode:forwards;
@@ -82,16 +82,39 @@ input[type='file'] {
     height: calc(100% - 33px);
     opacity: 0;
     z-index: 9;
+    max-width:100%;
+    width:100%;
+    cursor:pointer;
 
  
 }
 form {
   h4 {
-    margin-bottom:10px;
-    display:inline-block;
-    padding-left:2.5px;
-    font-size:18px;
+   width: 100%;
+    /* min-width: 160px; */
+    cursor: pointer;
+    background: #e72e2e;
+    color: #fff;
+    border: none;
+    border-radius: 15px;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    max-width: 150px;
+    font-weight: bold;
+    transition: .4s;
+    border: 2px solid #333;
+    background: #f7f0f0;
+    color: #eadede;
+    border-radius: 0;
+    background: #333;
+    justify-content: center;
+    display:flex;
   }
+}
+
+table {
+  min-height:150px;
 }
 
 fieldset.flex.logo-upload {
@@ -117,6 +140,11 @@ fieldset.flex.logo-upload {
     font-size: 14px;
     font-weight: bold;
     transition: .4s;
+
+    &.active {
+      background:#eadede;
+      transition:.4s;
+    }
 
 }
 fieldset {
@@ -385,7 +413,7 @@ h1 {
 form {
   margin-bottom:5px;
   padding-bottom:25px;
-  border-bottom:2px solid #eee;
+  border-bottom:2px solid #333;
   fieldset {
       border: none;
       padding:0;
@@ -463,7 +491,7 @@ form {
   position:fixed;
   z-index:999999;
   min-height:100vh;
-  padding:50px 25px;
+  padding:61px 25px 50px 25px;
   text-align:center;
   box-sizing: border-box;
   background:#fff;
@@ -477,6 +505,7 @@ form {
   }
   h5 {
     margin-top:15px;
+    font-size:14px;
   }
   ul {
     padding-left:0;
