--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -554,3 +554,37 @@ form {
       }
   }
 }
+
+.login-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height:100vh;
+    justify-content: center;
+    background:#f3f0f0;
+    form {
+        padding:25px;
+        border:2px solid #333;
+        width:100%;
+        max-width:400px;
+        background:#fff;
+        label {
+            display: block;
+            font-size: 14px;
+            text-align: left;
+            font-weight: 700;
+            color: #555;
+            padding: 8px 5px;
+        }
+        input[type='text'],
+        input[type='password'] {
+            height: 45px;
+            border-radius: 5px;
+            border: none;
+            background: #fff;
+            box-sizing: border-box;
+            padding: 0 0 0 5px;
+            width:100%;
+        }
+    }
+}
