--- a/client/src/Components/Login/Login.scss
+++ b/client/src/Components/Login/Login.scss
@@ -3,10 +3,10 @@
     flex-direction: column;
     align-items: center;
     height:100vh;
-    justify-content: center;
+    justify-content: initial;
     background:#f3f0f0;
-    padding-top:150px;
-    padding-bottom:150px;
+    padding-top:100px;
+    padding-bottom:100px;
     .hide {
         display:none;
 
@@ -44,15 +44,7 @@
     }
     form {
 
-        padding:25px;
-        border:2px solid #333;
-        width:100%;
-        max-width:400px;
-        background:#fff;
-        animation:formIn .5s 1;
-        animation-fill-mode:forwards;
-        position:relative;
-        margin-top:15px;
+
 
         
         &.register-form {
